syntax = "proto3";
option go_package = "project-project/pkg/service/task";

import "google/protobuf/empty.proto";

package task.service;

message TaskRpcRequest {
  string projectCode = 1;
  int64 page = 2;
  int64 pageSize = 3;
  string stageCode = 4;
  string name = 5;
  string assignTo = 6;
  int64 memberId = 7;
  string preTaskCode = 8;
  string nextTaskCode = 9;
  string toStageCode = 10;
  int32 taskType = 11;
  int32 type = 12;
  string taskCode = 13;
  int32 all = 14;
  int32 comment = 15;
  string content = 16;
  int32 num = 17;
  int64 beginTime = 18;
  string commentContent = 19;
  repeated string Mentions = 20;
}
message TaskStages{
  string code = 1;
  string name = 2;
  string projectCode = 3;
  int32 sort = 4;
  string description = 5;
  string createTime = 6;
  int32 deleted = 7;
  int32 id = 8;
}
message TaskStagesResponse {
  int64 total = 1;
  repeated TaskStages list = 2;
}
message ProjectMember {
  string name = 1;
  string avatar = 2;
  int64 memberCode = 3;
  string code = 4;
  string email = 5;
  int32 isOwner = 6;
}
message ProjectMemberResponse{
  int64 total = 1;
  repeated ProjectMember list = 2;
}
message Task{
  int64 Id  = 1;
  string ProjectCode  = 2;
  string Name  = 3;
  int32 Pri  = 4;
  string ExecuteStatus  = 5;
  string Description  = 6;
  string CreateBy  = 7;
  string DoneBy  = 8;
  string DoneTime  = 9;
  string CreateTime  = 10;
  string AssignTo  = 11;
  int32 Deleted  = 12;
  string StageCode  = 13;
  string TaskTag  = 14;
  int32 Done  = 15;
  string BeginTime  = 16;
  string EndTime  = 17;
  string RemindTime  = 18;
  string Pcode  = 19;
  int32 Sort  = 20;
  int32 Like  = 21;
  int32 Star  = 22;
  string DeletedTime  = 23;
  int32 Private  = 24;
  int32 IdNum  = 25;
  string Path  = 26;
  int32 Schedule  = 27;
  string VersionCode  = 28;
  string FeaturesCode  = 29;
  int32 WorkTime  = 30;
  int32 Status  = 31;
  string code = 32;
  int32 canRead = 33;
  Executor executor = 34;
  string projectName = 35;
  string stageName = 36;
  string  priText = 37;
  string statusText = 38;
}
message Executor {
  string Name = 1;
  string avatar = 2;
  string code = 3;
}
message TaskStageDetailListResponse{
  repeated Task list = 1;
}
message SelfTask{
  int64 Id  = 1;
  string ProjectCode  = 2;
  string Name  = 3;
  int32 Pri  = 4;
  string ExecuteStatus  = 5;
  string Description  = 6;
  string CreateBy  = 7;
  string DoneBy  = 8;
  string DoneTime  = 9;
  string CreateTime  = 10;
  string AssignTo  = 11;
  int32 Deleted  = 12;
  string StageCode  = 13;
  string TaskTag  = 14;
  int32 Done  = 15;
  string BeginTime  = 16;
  string EndTime  = 17;
  string RemindTime  = 18;
  string Pcode  = 19;
  int32 Sort  = 20;
  int32 Like  = 21;
  int32 Star  = 22;
  string DeletedTime  = 23;
  int32 Private  = 24;
  int32 IdNum  = 25;
  string Path  = 26;
  int32 Schedule  = 27;
  string VersionCode  = 28;
  string FeaturesCode  = 29;
  int32 WorkTime  = 30;
  int32 Status  = 31;
  string code = 32;
  string Cover = 33;
  string AccessControlType = 34;
  string WhiteList = 35;
  int32 Order =36;
  string TemplateCode = 37;
  string OrganizationCode = 38;
  string Prefix = 39;
  int32 OpenPrefix = 40;
  int32 Archive = 41;
  int64 ArchiveTime = 42;
  int32 OpenBeginTime = 43;
  int32 OpenTaskPrivate = 44;
  string TaskBoardTheme = 45;
  int32 AutoUpdateSchedule = 46;
  Executor executor = 47;
  string projectName = 48;
}
message SelfTaskListResponse{
  repeated SelfTask list = 1;
  int64  total = 2;
}
message TaskMember{
  int64 id = 1;
  string name = 2;
  string avatar = 3;
  string code = 4;
  string memberAccountCode = 5;
  int32 isExecutor = 6;
  int32 isOwner = 7;
}
message TaskMemberList{
  repeated TaskMember list = 1;
  int64  total = 2;
}
message Member{
  int64 id = 1;
  string name = 2;
  string avatar = 3;
  string code = 4;
}
message TaskLog {
  int64 id = 1;
  string MemberCode = 2;
  string Content = 3;
  string remark = 4;
  string Type = 5;
  string CreateTime = 6;
  string SourceCode = 7;
  string ActionType = 8;
  string ToMemberCode = 9;
  int32 IsComment = 10;
  string ProjectCode = 11;
  string Icon = 12;
  int32 IsRobot = 13;
  Member member = 14;
}
message TaskLogList{
  repeated TaskLog list = 1;
  int64  total = 2;
}
message TaskWorkTime {
  int64 id = 1;
  string memberCode = 2;
  string createTime = 3;
  string content = 4;
  string beginTime = 5;
  int32  num = 6;
  string code = 7;
  Member member = 8;
}
message TaskWorkTimeResponse {
  repeated TaskWorkTime list = 1;
}
message TaskFileRequest {
  string pathName = 1;
  string fileName = 2;
  string extension = 3;
  int64 size = 4;
  string projectCode = 5;
  string taskCode = 6;
  string organizationCode = 7;
  string fileUrl = 8;
  string fileType = 9;
  int64 memberId = 10;
}
message SourceDetail {
  int64  id = 1;
  string  code = 2;
  string pathName = 3;
  string title = 4;
  string Extension = 5;
  int32 size = 6;
  string ObjectType = 7;
  string OrganizationCode = 8;
  string  TaskCode = 9;
  string projectCode = 10;
  string createBy = 11;
  string createTime = 12;
  int32 downloads = 13;
  string Extra = 14;
  int32 Deleted = 15;
  string FileUrl = 16;
  string FileType = 17;
  string deletedTime = 18;
  string ProjectName = 19;
  string FullName = 20;
}
message TaskSource {
  int64  id = 1;
  string code = 2;
  string sourceType = 3;
  string sourceCode = 4;
  string linkType = 5;
  string linkCode = 6;
  string OrganizationCode = 7;
  string createBy = 8;
  string createTime = 9;
  int32 sort = 10;
  string title = 11;
  SourceDetail sourceDetail = 12;
}
message TaskSourceResponse{
  repeated TaskSource list = 1;
}


service TaskService {
  rpc GetTaskStages(TaskRpcRequest) returns (TaskStagesResponse) {}
  rpc GetProjectMember(TaskRpcRequest) returns (ProjectMemberResponse) {}
  rpc GetTaskStageDetailList(TaskRpcRequest) returns (TaskStageDetailListResponse) {}
  rpc SaveTask(TaskRpcRequest) returns (Task) {}
  rpc MoveTask(TaskRpcRequest) returns (google.protobuf.Empty) {}
  rpc GetSelfTaskList(TaskRpcRequest) returns (SelfTaskListResponse) {}
  rpc ReadTask(TaskRpcRequest) returns (Task) {}
  rpc GetTaskMemberList(TaskRpcRequest) returns (TaskMemberList) {}
  rpc GetTaskLog(TaskRpcRequest) returns(TaskLogList){}
  rpc GetTaskWorkTimeList(TaskRpcRequest) returns(TaskWorkTimeResponse) {}
  rpc SaveTaskWorkTimeList(TaskRpcRequest) returns(google.protobuf.Empty) {}
  rpc uploadFile(TaskFileRequest) returns(google.protobuf.Empty){}
  rpc GetTaskSources(TaskRpcRequest) returns(TaskSourceResponse){}
  rpc CreateComment(TaskRpcRequest) returns(google.protobuf.Empty){}
}